--- a/docs/api-reference/user/upsert-info.mdx
+++ b/docs/api-reference/user/upsert-info.mdx
@@ -1,5 +1,6 @@
 ---
 openapi: "PATCH /v2/user/{user_id}/info"
+title: Update User Demographics
 ---
 
 import FeatureBeta from '/snippets/feature-beta.mdx';
